Closed
Bug 1813391
Opened 2 years ago
Closed 2 years ago
Intermittent Assertion failure: !mIsSignaledImpendingShutdown, at /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:1992
Categories
(Core :: DOM: Content Processes, defect, P5)
Core
DOM: Content Processes
Tracking
()
RESOLVED
FIXED
111 Branch
Tracking | Status | |
---|---|---|
firefox-esr102 | --- | unaffected |
firefox109 | --- | unaffected |
firefox110 | --- | unaffected |
firefox111 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: jstutte)
References
(Regression)
Details
(Keywords: assertion, intermittent-failure, regression)
Attachments
(1 file)
Filed by: sstanca [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=403887169&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/Mr6pu3XQRd--lNsxVlEl_A/runs/0/artifacts/public/logs/live_backing.log
[task 2023-01-29T15:28:07.940Z] 15:28:07 INFO - TEST-OK | /html/cross-origin-opener-policy/resource-popup.https.html | took 7783ms
[task 2023-01-29T15:28:07.941Z] 15:28:07 INFO - Restarting browser for new test group
[task 2023-01-29T15:28:07.967Z] 15:28:07 INFO - PID 10961 | 1675006087959 Marionette INFO Stopped listening on port 48877
[task 2023-01-29T15:28:08.081Z] 15:28:08 INFO - PID 10961 | Assertion failure: !mIsSignaledImpendingShutdown, at /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:1992
[task 2023-01-29T15:28:08.085Z] 15:28:08 INFO - PID 10961 | #01: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0x13198458]
[task 2023-01-29T15:28:08.087Z] 15:28:08 INFO - PID 10961 | #02: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0x131a4bae]
[task 2023-01-29T15:28:08.089Z] 15:28:08 INFO - PID 10961 | #03: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0x17c053c3]
[task 2023-01-29T15:28:08.091Z] 15:28:08 INFO - PID 10961 | #04: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xce749dc]
[task 2023-01-29T15:28:08.093Z] 15:28:08 INFO - PID 10961 | #05: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xce71707]
[task 2023-01-29T15:28:08.096Z] 15:28:08 INFO - PID 10961 | #06: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xce7b4ca]
[task 2023-01-29T15:28:08.096Z] 15:28:08 INFO - PID 10961 | #07: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xcbd15f2]
[task 2023-01-29T15:28:08.097Z] 15:28:08 INFO - PID 10961 | #08: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xd7cebcd]
[task 2023-01-29T15:28:08.099Z] 15:28:08 INFO - PID 10961 | #09: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xce9fa98]
[task 2023-01-29T15:28:08.100Z] 15:28:08 INFO - PID 10961 | #10: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xcc48c04]
[task 2023-01-29T15:28:08.101Z] 15:28:08 INFO - PID 10961 | #11: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xcc55614]
[task 2023-01-29T15:28:08.101Z] 15:28:08 INFO - PID 10961 | #12: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xcc4ee6e]
[task 2023-01-29T15:28:08.105Z] 15:28:08 INFO - PID 10961 | #13: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xcc4e7ea]
[task 2023-01-29T15:28:08.105Z] 15:28:08 INFO - PID 10961 | #14: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xcc4e000]
[task 2023-01-29T15:28:08.105Z] 15:28:08 INFO - PID 10961 | #15: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xcc4d697]
[task 2023-01-29T15:28:08.105Z] 15:28:08 INFO - PID 10961 | #16: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xcc7efe5]
[task 2023-01-29T15:28:08.105Z] 15:28:08 INFO - PID 10961 | #17: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xc03ef65]
[task 2023-01-29T15:28:08.105Z] 15:28:08 INFO - PID 10961 | #18: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xc03e532]
[task 2023-01-29T15:28:08.114Z] 15:28:08 INFO - PID 10961 | #19: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xbc380d9]
[task 2023-01-29T15:28:08.114Z] 15:28:08 INFO - PID 10961 | #20: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xbcbef3a]
[task 2023-01-29T15:28:08.115Z] 15:28:08 INFO - PID 10961 | #21: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xbcb5a88]
[task 2023-01-29T15:28:08.116Z] 15:28:08 INFO - PID 10961 | #22: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xbcb2d09]
[task 2023-01-29T15:28:08.117Z] 15:28:08 INFO - PID 10961 | #23: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xbcb3431]
[task 2023-01-29T15:28:08.118Z] 15:28:08 INFO - PID 10961 | #24: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xbcc5075]
[task 2023-01-29T15:28:08.118Z] 15:28:08 INFO - PID 10961 | #25: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xbce7e75]
[task 2023-01-29T15:28:08.119Z] 15:28:08 INFO - PID 10961 | #26: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xbd30fb6]
[task 2023-01-29T15:28:08.120Z] 15:28:08 INFO - PID 10961 | #27: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xd5fcd8b]
[task 2023-01-29T15:28:08.121Z] 15:28:08 INFO - PID 10961 | #28: ???[/builds/worker/workspace/build/application/firefox/libxul.so +0xd601702]
[task 2023-01-29T15:28:08.121Z] 15:28:08 INFO - PID 10961 | #29: ??? (???:???)
[task 2023-01-29T15:28:08.122Z] 15:28:08 INFO - PID 10961 | AddressSanitizer:DEADLYSIGNAL
[task 2023-01-29T15:28:08.122Z] 15:28:08 INFO - PID 10961 | =================================================================
[task 2023-01-29T15:28:08.123Z] 15:28:08 ERROR - PID 10961 | ==10961==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000001 (pc 0x7f706c7ca48d bp 0x7ffca4f793d0 sp 0x7ffca4f793d0 T0)
[task 2023-01-29T15:28:08.124Z] 15:28:08 INFO - PID 10961 | ==10961==The signal is caused by a WRITE memory access.
[task 2023-01-29T15:28:08.125Z] 15:28:08 INFO - PID 10961 | ==10961==Hint: address points to the zero page.
[task 2023-01-29T15:28:09.400Z] 15:28:09 INFO - PID 10961 | #0 0x7f706c7ca48d in mozilla::dom::ContentParent::AssertAlive() /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:1992:3
[task 2023-01-29T15:28:09.401Z] 15:28:09 INFO - PID 10961 | #1 0x7f706c7d6bad in mozilla::dom::ContentParent::AddKeepAlive() /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:2433:3
[task 2023-01-29T15:28:09.402Z] 15:28:09 INFO - PID 10961 | #2 0x7f70712373c2 in mozilla::dom::CanonicalBrowsingContext::ChangeRemoteness(mozilla::dom::NavigationIsolationOptions const&, unsigned long) /builds/worker/checkouts/gecko/docshell/base/CanonicalBrowsingContext.cpp:2053:29
[task 2023-01-29T15:28:09.407Z] 15:28:09 INFO - PID 10961 | #3 0x7f70664a69db in mozilla::net::DocumentLoadListener::TriggerProcessSwitch(mozilla::dom::CanonicalBrowsingContext*, mozilla::dom::NavigationIsolationOptions const&, bool) /builds/worker/checkouts/gecko/netwerk/ipc/DocumentLoadListener.cpp:1976:13
[task 2023-01-29T15:28:09.408Z] 15:28:09 INFO - PID 10961 | #4 0x7f70664a3706 in mozilla::net::DocumentLoadListener::MaybeTriggerProcessSwitch(bool*) /builds/worker/checkouts/gecko/netwerk/ipc/DocumentLoadListener.cpp:1904:5
[task 2023-01-29T15:28:09.408Z] 15:28:09 INFO - PID 10961 | #5 0x7f70664ad4c9 in mozilla::net::DocumentLoadListener::OnStartRequest(nsIRequest*) /builds/worker/checkouts/gecko/netwerk/ipc/DocumentLoadListener.cpp:2507:8
[task 2023-01-29T15:28:09.408Z] 15:28:09 INFO - PID 10961 | #6 0x7f70662035f1 in mozilla::net::ParentChannelListener::OnStartRequest(nsIRequest*) /builds/worker/checkouts/gecko/netwerk/protocol/http/ParentChannelListener.cpp:86:25
[task 2023-01-29T15:28:09.409Z] 15:28:09 INFO - PID 10961 | #7 0x7f7066e00bcc in nsDocumentOpenInfo::OnStartRequest(nsIRequest*) /builds/worker/checkouts/gecko/uriloader/base/nsURILoader.cpp:167:34
[task 2023-01-29T15:28:09.409Z] 15:28:09 INFO - PID 10961 | #8 0x7f70664d1a97 in mozilla::net::ParentProcessDocumentOpenInfo::OnDocumentStartRequest(nsIRequest*) /builds/worker/checkouts/gecko/netwerk/ipc/DocumentLoadListener.cpp:297:39
[task 2023-01-29T15:28:09.410Z] 15:28:09 INFO - PID 10961 | #9 0x7f706627ac03 in mozilla::net::nsHttpChannel::CallOnStartRequest() /builds/worker/checkouts/gecko/netwerk/protocol/http/nsHttpChannel.cpp:1692:27
[task 2023-01-29T15:28:09.411Z] 15:28:09 INFO - PID 10961 | #10 0x7f7066287613 in mozilla::net::nsHttpChannel::ContinueProcessNormal(nsresult) /builds/worker/checkouts/gecko/netwerk/protocol/http/nsHttpChannel.cpp:2656:8
[task 2023-01-29T15:28:09.411Z] 15:28:09 INFO - PID 10961 | #11 0x7f7066280e6d in mozilla::net::nsHttpChannel::ContinueProcessResponse3(nsresult) /builds/worker/checkouts/gecko/netwerk/protocol/http/nsHttpChannel.cpp
[task 2023-01-29T15:28:09.412Z] 15:28:09 INFO - PID 10961 | #12 0x7f70662807e9 in mozilla::net::nsHttpChannel::ContinueProcessResponse2(nsresult) /builds/worker/checkouts/gecko/netwerk/protocol/http/nsHttpChannel.cpp:2256:10
[task 2023-01-29T15:28:09.413Z] 15:28:09 INFO - PID 10961 | #13 0x7f706627ffff in mozilla::net::nsHttpChannel::ContinueProcessResponse1() /builds/worker/checkouts/gecko/netwerk/protocol/http/nsHttpChannel.cpp:2229:10
[task 2023-01-29T15:28:09.414Z] 15:28:09 INFO - PID 10961 | #14 0x7f706627f696 in mozilla::net::nsHttpChannel::ProcessResponse() /builds/worker/checkouts/gecko/netwerk/protocol/http/nsHttpChannel.cpp:2137:10
[task 2023-01-29T15:28:09.414Z] 15:28:09 INFO - PID 10961 | #15 0x7f70662b0fe4 in mozilla::net::nsHttpChannel::OnStartRequest(nsIRequest*) /builds/worker/checkouts/gecko/netwerk/protocol/http/nsHttpChannel.cpp:7102:31
[task 2023-01-29T15:28:09.414Z] 15:28:09 INFO - PID 10961 | #16 0x7f7065670f64 in nsInputStreamPump::OnStateStart() /builds/worker/checkouts/gecko/netwerk/base/nsInputStreamPump.cpp:503:20
[task 2023-01-29T15:28:09.415Z] 15:28:09 INFO - PID 10961 | #17 0x7f7065670531 in nsInputStreamPump::OnInputStreamReady(nsIAsyncInputStream*) /builds/worker/checkouts/gecko/netwerk/base/nsInputStreamPump.cpp:408:21
[task 2023-01-29T15:28:09.416Z] 15:28:09 INFO - PID 10961 | #18 0x7f706526a0d8 in operator() /builds/worker/checkouts/gecko/xpcom/io/nsPipe3.cpp:73:47
[task 2023-01-29T15:28:09.417Z] 15:28:09 INFO - PID 10961 | #19 0x7f706526a0d8 in already_AddRefed<mozilla::CancelableRunnable> NS_NewCancelableRunnableFunction<CallbackHolder::CallbackHolder(nsIAsyncInputStream*, nsIInputStreamCallback*, unsigned int, nsIEventTarget*)::'lambda'()>(char const*, CallbackHolder::CallbackHolder(nsIAsyncInputStream*, nsIInputStreamCallback*, unsigned int, nsIEventTarget*)::'lambda'()&&)::FuncCancelableRunnable::Run() /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:665:9
[task 2023-01-29T15:28:09.417Z] 15:28:09 INFO - PID 10961 | #20 0x7f70652f0f39 in mozilla::RunnableTask::Run() /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:539:16
[task 2023-01-29T15:28:09.418Z] 15:28:09 INFO - PID 10961 | #21 0x7f70652e7a87 in mozilla::TaskController::DoExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:852:26
[task 2023-01-29T15:28:09.419Z] 15:28:09 INFO - PID 10961 | #22 0x7f70652e4d08 in mozilla::TaskController::ExecuteNextTaskOnlyMainThreadInternal(mozilla::detail::BaseAutoLock<mozilla::Mutex&> const&) /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:684:15
[task 2023-01-29T15:28:09.420Z] 15:28:09 INFO - PID 10961 | #23 0x7f70652e5430 in mozilla::TaskController::ProcessPendingMTTask(bool) /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:462:36
[task 2023-01-29T15:28:09.420Z] 15:28:09 INFO - PID 10961 | #24 0x7f70652f7074 in operator() /builds/worker/checkouts/gecko/xpcom/threads/TaskController.cpp:191:37
[task 2023-01-29T15:28:09.421Z] 15:28:09 INFO - PID 10961 | #25 0x7f70652f7074 in mozilla::detail::RunnableFunction<mozilla::TaskController::InitializeInternal()::$_3>::Run() /builds/worker/workspace/obj-build/dist/include/nsThreadUtils.h:546:5
[task 2023-01-29T15:28:09.422Z] 15:28:09 INFO - PID 10961 | #26 0x7f7065319e74 in nsThread::ProcessNextEvent(bool, bool*) /builds/worker/checkouts/gecko/xpcom/threads/nsThread.cpp:1197:16
[task 2023-01-29T15:28:09.422Z] 15:28:09 INFO - PID 10961 | #27 0x7f7065362fb5 in NS_InvokeByIndex /builds/worker/checkouts/gecko/xpcom/reflect/xptcall/md/unix/xptcinvoke_asm_x86_64_unix.S:101
[task 2023-01-29T15:28:09.423Z] 15:28:09 INFO - PID 10961 | #28 0x7f7066c2ed8a in Invoke /builds/worker/checkouts/gecko/js/xpconnect/src/XPCWrappedNative.cpp:1626:10
[task 2023-01-29T15:28:09.424Z] 15:28:09 INFO - PID 10961 | #29 0x7f7066c2ed8a in Call /builds/worker/checkouts/gecko/js/xpconnect/src/XPCWrappedNative.cpp:1179:19
[task 2023-01-29T15:28:09.424Z] 15:28:09 INFO - PID 10961 | #30 0x7f7066c2ed8a in XPCWrappedNative::CallMethod(XPCCallContext&, XPCWrappedNative::CallMode) /builds/worker/checkouts/gecko/js/xpconnect/src/XPCWrappedNative.cpp:1125:23
[task 2023-01-29T15:28:09.426Z] 15:28:09 INFO - PID 10961 | #31 0x7f7066c33701 in XPC_WN_CallMethod(JSContext*, unsigned int, JS::Value*) /builds/worker/checkouts/gecko/js/xpconnect/src/XPCWrappedNativeJSOps.cpp:965:10
[task 2023-01-29T15:28:09.426Z] 15:28:09 INFO - PID 10961 | #32 0x30a2c624fdc1 (<unknown module>)
[task 2023-01-29T15:28:09.426Z] 15:28:09 INFO - PID 10961 | AddressSanitizer can not provide additional info.
[task 2023-01-29T15:28:09.426Z] 15:28:09 INFO - PID 10961 | SUMMARY: AddressSanitizer: SEGV /builds/worker/checkouts/gecko/dom/ipc/ContentParent.cpp:1992:3 in mozilla::dom::ContentParent::AssertAlive()
[task 2023-01-29T15:28:09.426Z] 15:28:09 INFO - PID 10961 | ==10961==ABORTING
[task 2023-01-29T15:28:09.555Z] 15:28:09 INFO - PID 10961 | Exiting due to channel error.
[task 2023-01-29T15:28:09.555Z] 15:28:09 INFO - PID 10961 | Exiting due to channel error.
[task 2023-01-29T15:28:09.555Z] 15:28:09 INFO - PID 10961 | Exiting due to channel error.
[task 2023-01-29T15:28:09.556Z] 15:28:09 INFO - PID 10961 | Exiting due to channel error.
[task 2023-01-29T15:28:09.556Z] 15:28:09 INFO - PID 10961 | Exiting due to channel error.
[task 2023-01-29T15:28:09.556Z] 15:28:09 INFO - PID 10961 | Exiting due to channel error.
[task 2023-01-29T15:28:09.556Z] 15:28:09 INFO - PID 10961 | Exiting due to channel error.
[task 2023-01-29T15:28:09.556Z] 15:28:09 INFO - PID 10961 | Exiting due to channel error.
[task 2023-01-29T15:28:09.636Z] 15:28:09 INFO - Browser exited with return code 0
[task 2023-01-29T15:28:09.640Z] 15:28:09 INFO - Closing logging queue
[task 2023-01-29T15:28:09.640Z] 15:28:09 INFO - queue closed
[task 2023-01-29T15:28:09.693Z] 15:28:09 INFO - INFO | runtests.py | ASan using symbolizer at /builds/worker/workspace/build/application/firefox/llvm-symbolizer
[task 2023-01-29T15:28:09.702Z] 15:28:09 INFO - LSan enabled.
[task 2023-01-29T15:28:09.703Z] 15:28:09 INFO - INFO | runtests.py | ASan running in default memory configuration
[task 2023-01-29T15:28:09.704Z] 15:28:09 INFO - UBSan enabled.
[task 2023-01-29T15:28:09.705Z] 15:28:09 INFO - Application command: /builds/worker/workspace/build/application/firefox/firefox --marionette about:blank -profile /tmp/tmpf7_9sbyx
[task 2023-01-29T15:28:09.726Z] 15:28:09 INFO - PID 11267 | 1675003950509 Marionette INFO Marionette enabled
[task 2023-01-29T15:28:09.727Z] 15:28:09 INFO - PID 11267 | 1675003950519 Marionette INFO Listening on port 40223
[task 2023-01-29T15:28:09.729Z] 15:28:09 INFO - PID 11267 | console.error: (new Error("Unexpected content-type \"text/plain;charset=US-ASCII\"", "resource://services-settings/Utils.jsm", 407))
[task 2023-01-29T15:28:09.731Z] 15:28:09 INFO - PID 11267 | console.error: ({})
[task 2023-01-29T15:28:09.733Z] 15:28:09 INFO - PID 11267 | console.warn: SearchSettings: "get: No settings file exists, new profile?" (new NotFoundError("Could not open the file at /tmp/tmp5pjwe2ef/search.json.mozlz4", (void 0)))
[task 2023-01-29T15:28:09.734Z] 15:28:09 INFO - PID 11267 | console.error: (new Error("Unexpected content-type \"text/plain;charset=US-ASCII\"", "resource://services-settings/Utils.jsm", 407))
[task 2023-01-29T15:28:09.735Z] 15:28:09 INFO - PID 11267 | console.error: (new Error("Unexpected content-type \"text/plain;charset=US-ASCII\"", "resource://services-settings/Utils.jsm", 407))
[task 2023-01-29T15:28:09.736Z] 15:28:09 INFO - PID 11267 | console.error: (new Error("Unexpected content-type \"text/plain;charset=US-ASCII\"", "resource://services-settings/Utils.jsm", 407))
[task 2023-01-29T15:28:09.737Z] 15:28:09 INFO - PID 11267 | ALSA lib seq_hw.c:466:(snd_seq_hw_open) open /dev/snd/seq failed: No such file or directory
[task 2023-01-29T15:28:09.738Z] 15:28:09 INFO - PID 11267 | console.error: (new Error("Polling for changes failed: Unexpected content-type \"text/plain;charset=US-ASCII\".", "resource://services-settings/remote-settings.js", 334))
[task 2023-01-29T15:28:09.739Z] 15:28:09 INFO - PID 11267 | 1675004340570 addons.xpi ERROR System addon update list error Error: Failed downloading XML, status: 0, reason: error
[task 2023-01-29T15:28:09.743Z] 15:28:09 INFO - Starting runner
[task 2023-01-29T15:28:10.894Z] 15:28:10 INFO - TEST-START | /html/obsolete/requirements-for-implementations/other-elements-attributes-and-apis/document-all.html
[task 2023-01-29T15:28:11.544Z] 15:28:11 INFO - ..
[task 2023-01-29T15:28:11.545Z] 15:28:11 INFO - TEST-OK | /html/obsolete/requirements-for-implementations/other-elements-attributes-and-apis/document-all.html | took 650ms
Comment hidden (Intermittent Failures Robot) |
Assignee | ||
Comment 2•2 years ago
|
||
This seems to be another edge case we overlooked. I think we cannot just adjust ContentParent::IsAlive
to check if IsSignaledImpendingShutdown
without checking where it is used, in particular here or here.
This has been brought to the surface thanks to bug 1810666, though it was most probably a hidden problem also before. It is most likely the combination of bug 1731792 and bug 1777198 that made this case possible.
Regressed by: 1810666
Comment 3•2 years ago
|
||
Set release status flags based on info from the regressing bug 1810666
status-firefox109:
--- → unaffected
status-firefox110:
--- → unaffected
status-firefox111:
--- → affected
status-firefox-esr102:
--- → unaffected
Keywords: regression
Assignee | ||
Comment 4•2 years ago
|
||
Updated•2 years ago
|
Assignee: nobody → jstutte
Status: NEW → ASSIGNED
Updated•2 years ago
|
Attachment #9314793 -
Attachment description: Bug 1813391 - Have ContentParent::IsRecyclable and check it instead of IsAlive where appropriate. r?smaug → Bug 1813391 - Have ContentParent::IsRecyclableShuttingDown and check it instead of IsAlive where appropriate. r?smaug
Updated•2 years ago
|
Attachment #9314793 -
Attachment description: Bug 1813391 - Have ContentParent::IsRecyclableShuttingDown and check it instead of IsAlive where appropriate. r?smaug → Bug 1813391 - Have ContentParent::IsShuttingDown and check it instead of IsAlive where appropriate. r?smaug
Pushed by jstutte@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6245ec7854cc
Have ContentParent::IsShuttingDown and check it instead of IsAlive where appropriate. r=smaug
Comment 6•2 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 111 Branch
Comment hidden (Intermittent Failures Robot) |
You need to log in
before you can comment on or make changes to this bug.
Description
•