Bug 1813391 - Have ContentParent::IsShuttingDown and check it instead of IsAlive where appropriate. r=smaug

Differential Revision: https://phabricator.services.mozilla.com/D168225