docshell/base/CanonicalBrowsingContext.cpp
@@ -2046,7 +2046,7 @@ CanonicalBrowsingContext::ChangeRemoteness(
   // process, and then putting our previous document in the BFCache, try to stay
   // in the same process to avoid creating new processes unnecessarily.
   RefPtr<ContentParent> existingProcess = GetContentParent();
-  if (existingProcess && existingProcess->IsAlive() &&
+  if (existingProcess && !existingProcess->IsShuttingDown() &&
       aOptions.mReplaceBrowsingContext &&
       aOptions.mRemoteType == existingProcess->GetRemoteType()) {
     change->mContentParent = existingProcess;
